asco-study-center/src/App.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

@import url('https://fonts.googleapis.com/css?family=Cairo:wght@200&family=Dancing+Script&family=Playfair+Display&family=Quicksand:wght@300&display=swap');


.App {
  text-align: center;
  bottom: 0;
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.main-content {
  flex: 1;
}

.flex-column {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}



header {
  position: sticky !important;
  background-color: #fff;
  color: black;
  height: 100%;
  top: 0;
  z-index: 100;
}

.navbar-collapse {
  margin: 0;
  padding: 0;
}

.navbar.navbar-expand-lg .navbar-collapse {
  margin: 0 !important;
  padding: 0 !important;
}

.navbar {
  position: sticky;
  top: 0;
  background-color: #fff;
  color: black;
  z-index: 100;
  box-shadow: 0px 4px 6px -2px rgba(0, 0, 0, 0.2);
}

.toggle {
  margin-right: 15px;
}

.footer {
  position: relative;
  bottom: 0;
  width: 100%;
  background-color: #3dcd58;
  color: #fff;
  padding: 10px;
  text-align: left;
  text-decoration: none;
}

.footer-text {
  color: #fff;
  text-align: left;
  text-decoration: none;
}

.footer-text:hover {
  text-decoration: underline;
  color: #fff;
}

.footer-image {
  margin-left: 0;
  float: left;
  -webkit-transition: all 0.50s;
  transition: all 0.50s;

  &:hover {
    border: none;
    filter: brightness(105%);
    -webkit-filter: brightness(105%);
    -moz-filter: brightness(105%);
    -o-filter: brightness(105%);
    -ms-filter: brightness(105%);
    -webkit-transition: all 0.50s;
    transition: all 0.50s;
  }
}

.text-center {
  text-align: center;
}

.button-container {
  text-align: center;
  margin-top: 5px;
}

.carousel-caption {
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  transform: translateY(-50%);
}
#aboutasco{
  width: 100% !important;
}
.section-title {
  font-size: 5vw;
  letter-spacing: 3px;
  background-color: #3dcd58;
  color: white;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  padding: 5px;
}

.smaller {
  font-size: 1.7vw;
  text-align: start;
  margin-top: 5px;
}
.smaller-pt {
  font-size: 1.7vw;
  text-align: start;
  margin-top: 5px;
}

.asco-logo {
  margin-left: 10px;
  -webkit-transition: all 0.50s;
  transition: all 0.50s;
  width: 30vw;

  &:hover {
    border: none;
    filter: brightness(130%);
    -webkit-filter: brightness(130%);
    -moz-filter: brightness(130%);
    -o-filter: brightness(130%);
    -ms-filter: brightness(130%);
    -webkit-transition: all 0.50s;
    transition: all 0.50s;
  }
}



.navtext {
  font-family: 'M PLUS Rounded 1c', sans-serif;
  color: #191919 !important;
  justify-content: center;
  align-items: left;
  text-align: left;
  font-size: 1.3rem;
  text-decoration: none;
  margin-left: 15px;
}

.fa-star {
  color: #3dcd58;
}

.fa-youtube-play {
  color: #ff0000;
}

.fa-linkedin-square {
  color: #0077B5;
}

.fa-twitter-square {
  color: #1DA1F2;
}

#navbarScroll {
  background-color: lightgray;
}

.custom-link {
  color: #191919 !important;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 1.2rem;
  text-decoration: none;
  margin-left: 15px;
  background: none !important;
}
.custom-links {
  color: #191919 !important;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 1.2rem;
  text-decoration: none;
  margin-left: 15px;
  padding: 0px !important;
  background: none !important;
}
.custom-links a {
  text-decoration: none;
  background-color: transparent !important;
}

.custom-links a:hover {
  text-decoration: underline;
  color: #191919;
}
#navDropdown {
  background-color: lightgray;
  font-size: 1.2rem;
  color: #191919;
  justify-content: center;
  align-items: center;
  text-align: left;
  margin-bottom: 0;
}
/* 565 */
.outlined-text {
  font-size: 4vw;
}
/* @media screen and (min-width: 1441px) {
  .outlined-text {
    font-size-adjust: inherit;
    font-size: 70px;
  }
}

@media screen and (max-width: 1440px) {
  .outlined-text {
    font-size-adjust: inherit;
    font-size: 70px;
  }
}
@media screen and (max-width: 1149px) {
  .outlined-text {
    font-size-adjust: inherit;
    font-size: 60px;
  }
}
@media screen and (max-width: 995px) {
  .outlined-text {
    font-size-adjust: inherit;
    font-size: 50px;
  }
}
@media screen and (max-width: 839px) {
  .outlined-text {
    font-size-adjust: inherit;
    font-size: 40px;
  }
}

@media screen and (max-width: 755px) {
  .outlined-text {
    font-size-adjust: inherit;
    font-size: 30px;
  }
}
@media screen and (max-width: 550px) {
  .outlined-text {
    font-size: 25px;
  }
}
@media screen and (max-width: 500px) {
  .outlined-text {
    font-size: 22px;
  }
}
@media screen and (max-width: 450px) {
  .outlined-text {
    font-size: 18px;
  }
}
@media screen and (max-width: 385px) {
  .outlined-text {
    font-size: 15px;
  }
}
@media screen and (max-width: 320px) {
  .outlined-text {
    font-size: 10px;
  }
} */

@media screen and (min-width: 992px) {
  #navbarScroll {
    background-color: #fff;
    font-size: 1.5vw;
    text-align: left;
  }

  .custom-link {
    background-color: #fff;
    font-size: 1.5vw;
    color: #191919;
    justify-content: center;
    align-items: center;
    text-align: center;
    left: 0;
  }
  .custom-links {
    font-size: 1.5vw;
    color: #191919;
    justify-content: center;
    align-items: center;
    text-align: center;
    left: 0;
    background: none;
  }
  .smaller {
    font-size: 1vw;
    text-align: start;
    margin-top: -5px;
    background: none;
  }
  .smaller-pt {
    font-size: 1.7vw;
    text-align: start;
    margin-top: 5px;
  }
  

  #navDropdown {
    background-color: #fff;
    font-size: 1.5vw;
    color: #191919;
    margin-top: 5px;
    margin-bottom: 0;
    left: 0;
    text-align: center;
  }
}

.slide-text {

  color: #fff;
  justify-content: center;

}
/* ... */

